Fixed widget alignment issues

--- a/sass/breakpoints/_40em-up.scss
+++ b/sass/breakpoints/_40em-up.scss
@@ -305,7 +305,7 @@ SIDEBARS & ASIDES
 WIDGET STYLES
 *********************/
 
-.widget-contain{
+.widget-contain .menu-primary-menu-container{
 	width:14em;
 
 	ul{
