--- a/sass/breakpoints/_base.scss
+++ b/sass/breakpoints/_base.scss
@@ -446,7 +446,7 @@ SIDEBAR STYLES
 WIDGET STYLES
 *********************/
 
-.widget-contain{
+.widget-contain .menu-primary-menu-container{
 
 	ul{
 		list-style: none;
